--- a/tree-web/static/index.html
+++ b/tree-web/static/index.html
@@ -66,6 +66,7 @@
 
   <script type="module">
     import { Cosmograph } from "https://esm.sh/@cosmograph/cosmograph@1.3.1?bundle";
+    import pako from "https://esm.sh/pako@2.1.0";
 
     const el = document.getElementById('mount');
     const logEl = document.getElementById('log');
@@ -76,6 +77,8 @@
         'parsing': 'Parsing tree',
         'layout': 'Computing layout',
         'rendering': 'Preparing data',
+        'nodes_chunk': 'Transferring nodes',
+        'links_chunk': 'Transferring links',
         'complete': 'Complete',
         'error': 'Error'
       };
@@ -95,80 +98,65 @@
     async function main() {
       updateProgress('reading', 0);
 
-      const eventSource = new EventSource('/api/graph/stream');
-      let nodes = null;
-      let links = null;
+      const resp = await fetch('/api/graph/binary');
+      if (!resp.ok || !resp.body) {
+        updateProgress('error', 0);
+        logEl.innerHTML += `<div style="color: #ff6b6b; margin-top: 4px;">Download failed (${resp.status})</div>`;
+        return;
+      }
 
-      eventSource.onmessage = (event) => {
-        try {
-          const data = JSON.parse(event.data);
+      const contentLength = Number(resp.headers.get('content-length')) || 0;
+      const reader = resp.body.getReader();
+      let received = 0;
+      const chunks = [];
 
-          if (data.stage === 'error') {
-            eventSource.close();
-            updateProgress('error', 0);
-            logEl.innerHTML += `<div style="color: #ff6b6b; margin-top: 4px;">${data.error || 'Unknown error'}</div>`;
-            return;
-          }
-
-          if (data.stage === 'complete') {
-            // Completion message received, wait for data message
-            updateProgress('rendering', 95);
-            return;
-          }
-
-          if (data.stage === 'data') {
-            // Data message received
-            eventSource.close();
-            nodes = data.nodes;
-            links = data.links;
-            updateProgress('rendering', 97);
-
-            // Start frontend rendering
-            setTimeout(() => {
-              updateProgress('rendering', 98);
-              const graph = new Cosmograph(el, {
-                disableSimulation: true,        // freeze layout
-                idField: 'id', sourceField: 'source', targetField: 'target',
-                backgroundColor: '#0b0f14',
-                nodeSize: n => n.pixel_size || 2,
-                nodeColor: n => n.color || '#5ac8fa',
-                nodeLabelAccessor: n => n.label,
-                hoveredNodeLabelColor: '#fff',
-                linkColor: '#3a3f44', linkOpacity: 0.35,
-              });
-              updateProgress('rendering', 99);
-              graph.fitView();
-              graph.setData(nodes, links);
-              updateProgress('complete', 100);
-              setTimeout(() => {
-                logEl.innerHTML = `<div>Rendered: ${nodes.length.toLocaleString()} nodes, ${links.length.toLocaleString()} links</div>`;
-              }, 500);
-            }, 100);
-            return;
-          }
-
-          // Update progress for intermediate stages
-          updateProgress(data.stage, data.progress);
-        } catch (e) {
-          console.error('Error parsing event data:', e, event.data);
+      while (true) {
+        const { done, value } = await reader.read();
+        if (done) break;
+        if (value) {
+          chunks.push(value);
+          received += value.length;
+          const progress = contentLength ? (received / contentLength) * 90 : 60;
+          updateProgress('rendering', progress);
         }
-      };
+      }
 
-      eventSource.onerror = (error) => {
-        console.error('EventSource error:', error);
-        // Only show error if connection is actually closed (readyState 2)
-        if (eventSource.readyState === EventSource.CLOSED) {
-          // Check if we already have the data
-          if (nodes && links) {
-            // We have the data, connection just closed normally
-            return;
-          }
-          eventSource.close();
-          updateProgress('error', 0);
-          logEl.innerHTML += `<div style="color: #ff6b6b; margin-top: 4px;">Connection closed unexpectedly</div>`;
-        }
-        // For other states (CONNECTING, OPEN), just log - connection might recover
-      };
+      const merged = new Uint8Array(received);
+      let offset = 0;
+      for (const chunk of chunks) {
+        merged.set(chunk, offset);
+        offset += chunk.length;
+      }
+
+      updateProgress('rendering', 91);
+      const decompressed = pako.ungzip(merged);
+      updateProgress('rendering', 94);
+      const decoded = new TextDecoder('utf-8').decode(decompressed);
+      updateProgress('rendering', 96);
+      const payload = JSON.parse(decoded);
+
+      const nodes = payload.nodes || [];
+      const links = payload.links || [];
+
+      updateProgress('rendering', 98);
+      requestAnimationFrame(() => {
+        const graph = new Cosmograph(el, {
+          disableSimulation: true,
+          idField: 'id', sourceField: 'source', targetField: 'target',
+          backgroundColor: '#0b0f14',
+          nodeSize: n => n.pixel_size || 2,
+          nodeColor: n => n.color || '#5ac8fa',
+          nodeLabelAccessor: n => n.label,
+          hoveredNodeLabelColor: '#fff',
+          linkColor: '#3a3f44', linkOpacity: 0.35,
+        });
+        graph.fitView();
+        graph.setData(nodes, links);
+        updateProgress('complete', 100);
+        setTimeout(() => {
+          logEl.innerHTML = `<div>Rendered: ${nodes.length.toLocaleString()} nodes, ${links.length.toLocaleString()} links</div>`;
+        }, 400);
+      });
     }
     
     main().catch(e => {
